# sbeacon

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  cog.toml  pyproject.toml  tracker.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  release.yml
docs/: DESIGN.md  PRICING.md  SUMMARY.md
docs/design/: ALLOCATION.md  CONFIG.md  PNL.md  TAX.md  bootstrap-plan.md
docs/usage/: xtb.md
scripts/: reload.sh
src/portfolio_tracker/: cli.py  config.py
src/portfolio_tracker/adapters/ibkr/: normalize.py  parse.py
src/portfolio_tracker/adapters/xtb/: discover.py  normalize.py  parse.py
src/portfolio_tracker/domain/: accounts.py  events.py  instruments.py
src/portfolio_tracker/pricing/: cache.py  composite.py  nbp.py  provider.py  yahoo.py
src/portfolio_tracker/reports/: allocation.py  lots.py  pnl.py  positions.py  summary.py  tax.py
src/portfolio_tracker/storage/: index.py  ledger.py
tests/: conftest.py  test_config.py  test_domain.py
tests/adapters/ibkr/: test_normalize.py  test_parse.py
tests/adapters/xtb/: test_discover.py  test_normalize.py  test_parse.py
tests/reports/: test_allocation.py  test_lots.py  test_pnl.py  test_positions.py  test_summary.py  test_tax.py
tests/storage/: test_ledger.py
